# LumintoGold

./: .gitignore  Dockerfile  README.md  bot.cmd  bot.sh  deprecated.py  install.sh  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  test.py  test2.py
configs/: config.yml  config_example.yml
modules/: ai.py  apis.py  autochat.py  cli.py  clickbee.py  config.py  d.py  db.py  flip_map.py  flood.py  format.py  formatter.py  genpass.py  get_sys.py  handlers.py  ipman.py  iterators.py  notes.py  pathes.py  phrase.py  phrases.py  settings.py  task_gen.py  telemt.py  tz.py  vktarget_bot.py
