[project]
name = "lumintogold"
version = "0.1.0"
description = "Юзербот с развлекательными и полезными функциями."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "bestconfig>=1.3.6",
    "cryptg>=0.5.2",
    "google-genai[aiohttp]==1.20",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "psutil>=7.1.3",
    "telethon>=1.42.0",
]

[tool.ruff]
unsafe-fixes = true
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"