[project]
name = "lumintogold"
version = "0.2.0"
description = "Юзербот с развлекательными и полезными функциями."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.13.2",
    "bestconfig>=1.3.6",
    "cryptg>=0.5.2",
    "geopy>=2.4.1",
    "groq>=1.0.0",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "psutil>=7.1.3",
    "pytz>=2025.2",
    "ruff>=0.14.14",
    "telethon>=1.42.0",
    "uvloop>=0.22.1",
    "vkbottle>=4.6.2",
]

[tool.ruff]
unsafe-fixes = true
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "W",    # предупреждения
    "F",    # логич. ошибки
    "Q",    # кавычки
    "I",    # сортировка импортов
    "UP",   # современный Python
    "PERF", # производительность
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
